--- a/Developpement/templates/clarinette/clarinette_informations.html
+++ b/Developpement/templates/clarinette/clarinette_informations.html
@@ -9,6 +9,11 @@
     <li id="actu" data-target="#myCarousel" data-slide-to="0"></li>
     <li id="actu" data-target="#myCarousel" data-slide-to="1"></li>
     <li id="actu" data-target="#myCarousel" data-slide-to="2"></li>
+    <li id="actu" data-target="#myCarousel" data-slide-to="3"></li>
+    <li id="actu" data-target="#myCarousel" data-slide-to="4"></li>
+    <li id="actu" data-target="#myCarousel" data-slide-to="5"></li>
+    <li id="actu" data-target="#myCarousel" data-slide-to="6"></li>
+    <li id="actu" data-target="#myCarousel" data-slide-to="7"></li>
   </ol>
 
   <!-- Wrapper for slides -->
@@ -16,20 +21,10 @@
     <div class="item active actu">
       <img id="image" src="{{ url_for('static',filename='img/clarinette.jpg' ) }}" style="width:100%;" alt="Clarinette sopranino" >
       <div id="contour" class="carousel-caption">
-        <h3>Clarinette sopranino</h3>
+        <h3>Clarinette en Mi ♭</h3>
         <a type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo">En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></a>
         <p id="demo" class="collapse">
-          Un peu plus grande que la sopranino, cette clarinette est beaucoup plus courante que sa petite soeur.
-          Il suffit de regarder l'offre des facteurs pour s'en rendre compte immédiatement.
-          Selon les modèles, le corps est soit d'un seul tenant, soit en deux parties.
-          Comme la majorité des clarinettes, ce modèle est dit transpositeur. C'est à dire que lorsque l'on joue un do écrit, la note réelle est un mi bémol situé une tierce mineure au dessus.
-          La clarinette soprano en mi bémol est également appelée clarinette piccolo à cause de son registre aigu.
-          Bien que difficile à maîtriser, ce registre est souvent qualifié de criard, ironique ou encore de sarcastique.
-          Son caractère est particulièrement bien mis en évidence dans les pièces "Till l'espiègle" (Richard Strauss) ou "La Symphonie Fantastique" (Berlioz).
-          Ses registres médium et grave sont plus adaptés au passages mélancoliques et ténébreux.
-          Rendue populaire par les orchestres d'harmonie, cette clarinette a fait sa première apparition dans l'orchestre à la fin du 19ème siècle.
-          Elle ne s'y installera définitivement que grâce à des compositeurs de l'école française comme Roussel, Milhaud ou Ravel.
-          <br><b>Tonalité :</b> Mi bémol
+          La clarinette en Mi ♭ ou petite clarinette est un instrument de petite taille (48 cm) au son clair et même mordant.  Elle nécessite une excellente technique d’embouchure car c’est son registre aigu qui est le plus utilisé, c’est aussi le plus délicat. Elle est capable d’éclaircir à elle seule le son d’un grand ensemble de clarinettes.
         </p>
       </div>
     </div>
@@ -38,18 +33,10 @@
       <div class="actu">
         <img id="image" src="{{ url_for('static',filename='img/clarinette2.jpg' ) }}" style="width:100%;" alt="Clarinette sopranino" >
         <div id="contour" class="carousel-caption">
-            <h3>Clarinette soprano en Mi bémol</h3>
+            <h3>Clarinette en Si ♭</h3>
             <a type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo2">En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></a>
             <p id="demo2" class="collapse">
-              La clarinette sopranino est la plus petite, et donc la plus aigue de toutes les clarinettes.
-              Elle ne mesure que 25 centimètres, et son corps est constitué d'un seul tenant, soit en bois, soit en métal.
-              Sa sonorité, aussi stridente que perçante, est liée à la petite taille de l'instrument.
-              Elle est d'ailleurs si petite que les doigts se touchent une fois posés sur cette clarinette.
-              La rareté de cet instrument s'explique par son utilisation peu courante.
-              Elle était principalement utilisée par les bandas italiennes pour la musique militaire.
-              Le Bal Masqué de Verdi est la pièce la plus significative du répertoire classique de cet instrument.
-              Cette clarinette semble remise à l'honneur par les compositeurs contemporains pour sa sonorité, comme Gilbert Amy avec "Espace déployé".
-              <br><b>Tonalité :</b> La bémol
+              La clarinette en Si ♭ est la clarinette la plus utilisée. C’est sur cette clarinette que l’on apprend à jouer, elle est polyvalente, elle permet une grande virtuosité et sa palette de nuances et de sonorité est immense. Elle est capable de passer d’un son très doux à un son d’une dureté métallique et avec un éventail de nuances allant d’un  ppp à la limite de l’audible au fff proche d’une trompette. Cette clarinette permet d’aborder une grande variété de répertoires, de la musique classique à la musique contemporaine, en passant par le jazz, les musiques traditionnelles notamment des Balkans et Klezmer. On la retrouve aussi bien en orchestre symphonique qu’en formation de chambre, évidemment en orchestre d’harmonie où elle remplace les violons de l’orchestre symphonique, en petite formation de jazz, dans les Klezmorim etc… Sa polyvalence lui permet tour à tour d’accompagner un thème pour lui apporter une couleur ou d’être soliste. Nous avons la chance d’avoir un répertoire de sonates et de concertos très conséquent.
             </p>
         </div>
       </div>
@@ -60,15 +47,75 @@
       <div class="actu">
         <img id="image" src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette sopranino" >
         <div id="contour" class="carousel-caption">
-            <h3>Clarinette en Ré</h3>
+            <h3>Clarinette en La</h3>
             <a type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo3">En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></a>
             <p id="demo3" class="collapse">
-              Bien que mieux représentée par les facteurs que la sopranino en la bémol, la clarinette en ré reste assez rare.
-              Cette clarinette est aujourd'hui utilisée quasiment exclusivement pour l'interprétation des concertos de Molter.
-              Son timbre est plus doux que celui de la mi bémol dans le grave, et elle propose un aigu séduisant.
-              Certaines pièces de Richard Strauss et de Stravinsky incluent des traits écrits pour cet instrument,
-              mais les instrumentistes préfèrent très souvent les transposer pour la clarinette soprano en mi bémol.
-              <br><b>Tonalité :</b> Ré
+              La clarinette en La ressemble à la clarinette en Si ♭, elle un peu plus grande ( 70 cm contre 66 cm pour la clarinette Si ♭), elle se joue avec le même bec. Elle est également caractérisée par un son plus chaud, plus rond, plus profond. Son domaine d’utilisation est principalement l’orchestre symphonique, et également la musique de chambre, notamment chez les compositeurs romantiques allemands.
+            </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="item actu">
+      <div class="actu">
+        <img id="image" src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette sopranino" >
+        <div id="contour" class="carousel-caption">
+            <h3>Cor de basset en Fa</h3>
+            <a type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo4">En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></a>
+            <p id="demo4" class="collapse">
+              Avec le cor de basset en Fa, nous quittons les clarinettes « droites » et  entrons dans le groupe des clarinettes basses, de forme courbe. C’est littéralement une petite clarinette basse, au son velouté et très expressif. Mozart l’a considérablement utilisé dans son Requiem, ses opéras (la Clémence de Titus, la Flûte enchantée) et dans tout un répertoire de musique maçonnique auquel sa sonorité noble et majestueuse confère un caractère si particulier.
+            </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="item actu">
+      <div class="actu">
+        <img id="image" src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette sopranino" >
+        <div id="contour" class="carousel-caption">
+            <h3>Clarinette alto en Mi ♭</h3>
+            <a type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo5">En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></a>
+            <p id="demo5" class="collapse">
+              La clarinette alto en Mi ♭, très proche du cor de basset de par sa forme et sa sonorité, est très utilisée en orchestre d’harmonie et en ensemble de clarinettes. L’un et l’autre de ces instruments permettent de restituer de façon intéressante un solo très expressif de violoncelle par exemple.
+            </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="item actu">
+      <div class="actu">
+        <img id="image" src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette sopranino" >
+        <div id="contour" class="carousel-caption">
+            <h3>Clarinette basse en Si ♭</h3>
+            <a type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo6">En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></a>
+            <p id="demo6" class="collapse">
+              La clarinette basse en Si ♭ est certainement l’instrument le plus connu après la clarinette en Si ♭. Elle sonne une octave sous cette dernière. Sa sonorité particulièrement envoutante fait d’elle un instrument très utilisé en orchestre, également prisé par les musiciens de jazz et comme instrument soliste en musique contemporaine. C’est la basse du quatuor de clarinettes, ainsi que de l’ensemble de clarinettes. Il en existe 2 modèles, l’un descendant au Mi ♭ grave, l’autre à l’Ut grave (d’une taille d’environ 165 cm).
+            </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="item actu">
+      <div class="actu">
+        <img id="image" src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette sopranino" >
+        <div id="contour" class="carousel-caption">
+            <h3>Clarinette contralto en Mi ♭</h3>
+            <a type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo7">En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></a>
+            <p id="demo7" class="collapse">
+              La clarinette contralto en Mi ♭ est assez peu courante, car peu utilisée en orchestre. Elle a toute sa place dans un orchestre d’harmonie ou dans un ensemble de clarinettes, où ses graves puissants et ronds font merveille. Il en existe deux versions, l’une droite, descendant au Mi ♭ grave (avec un corps en bois ou  en métal, suivant les fabricants), et l’autre recourbée, dite « Paperclip », descendant à l’ut grave (Leblanc uniquement).
+            </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="item actu">
+      <div class="actu">
+        <img id="image" src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette sopranino" >
+        <div id="contour" class="carousel-caption">
+            <h3>Clarinette contrebasse en Si ♭</h3>
+            <a type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo8">En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></a>
+            <p id="demo8" class="collapse">
+              La clarinette contrebasse en Si ♭ est la clarinette la plus grave utilisée dans notre formation. Elle sonne une octave sous la clarinette basse et donc deux octaves sous la clarinette Si ♭. Nous jouons des instruments Leblanc, tout en métal, qui sont les références en la matière. Elles existent en deux modèles, comme pour la contralto, droite ou « Paperclip », plus grave. Leur taille est très impressionnante, la contrebasse droite mesure environ 2,70 m et se joue debout, la version « Paperclip » dépasse les 3 m mais peut se jouer assis grâce à sa forme plus compacte. Ces instruments sont très utiles dans un ensemble de clarinettes, ils assurent des basses profondes et riches qui donnent beaucoup de rondeur à la sonorité du groupe. Malheureusement, ces modèles (Leblanc) ne sont plus fabriqués depuis 1983, mais ils peuvent se trouver d’occasion, principalement outre Atlantique.
             </p>
         </div>
       </div>
