--- a/Developpement/templates/clarinette/clarinette_historique.html
+++ b/Developpement/templates/clarinette/clarinette_historique.html
@@ -6,36 +6,21 @@
     <div class="well">
       <img class="presentation-img-titre img-thumbnail img-rounded" src="{{ url_for('static',filename='img/clarinette.jpg') }}" alt="">
       <div class="presentation-text-titre">
-        <p>La clarinette est un instrument de musique à vent de la famille des bois caractérisée par son anche simple et sa perce quasi cylindrique.
-          Elle a été créée vers 1690 par Johann Christoph Denner (1655-1707) à Nuremberg sur la base d'un instrument à anche simple plus ancien : le « chalumeau ». La clarinette soprano est le modèle le plus commun.
-          La perce cylindrique de la clarinette la distingue du hautbois et du saxophone, tous deux à perce conique, et lui confère une aptitude au quintoiement.
-          Son timbre chaud dans le registre grave, peut s'avérer extrêmement brillant voire perçant dans l'aigu.
-          De tous les instruments à vent de sa famille, la clarinette possède la plus grande tessiture avec trois octaves plus une sixte mineure, soit 45 notes en tout.</p>
+        <p>La clarinette est un instrument à vent de la famille des bois caractérisée par son anche simple et sa perce approximativement cylindrique.
+        De tous les instruments à vent, la clarinette possède la plus grande tessiture avec 3 octaves plus une sixte mineure, soit 45 notes en tout[2]. Elle se décline en une famille d'instruments presque tous transpositeurs, depuis la clarinette contrebasse jusqu'à la clarinette sopranino, couvrant ainsi toute l'étendue d'un orchestre symphonique. À l'exception des percussions, la clarinette est l'instrument qui possède la plus grande famille.</p>
       </div>
     </div>
     <h1 class="titre-gpartie">Historique de la clarinette</h1>
     <div class="well">
       <div class="presentation-text">
-        <p>Omitto iuris dictionem in libera civitate contra leges senatusque
-          consulta; caedes relinquo; libidines praetereo, quarum acerbissimum
-          extat indicium et ad insignem memoriam turpitudinis et paene ad iustum
-          odium imperii nostri, quod constat nobilissimas virgines se in puteos
-          abiecisse et morte voluntaria necessariam turpitudinem depulisse.
-          Nec haec idcirco omitto, quod non gravissima sint, sed quia nunc
-          sine teste dico.</p>
+        <p>L’histoire de la clarinette débute autour de 1700 à Nuremberg grâce à Johann Christian Denner. Celui-ci transforma le chalumeau, instrument ancien à anche simple et de perce cylindrique, en une clarinette par l’adjonction de clés et de trous supplémentaires. La fameuse clé du haut, dite clé de douzième, permit à l’instrument de « quintoyer », avec une grande stabilité et une pureté sonore inconnue jusqu’alors. Grâce à la persévérance et au talent de Denner et de son fils, puis d’autres facteurs d’instruments par la suite, aidés et encouragés par les instrumentistes, les perfectionnements et les améliorations techniques et acoustiques firent progresser la clarinette au point qu’elle intégra rapidement les orchestres symphoniques puis pris un rôle d’instrument soliste, reconnaissable entre tous. </p>
       </div>
       <img class="presentation-img img-thumbnail img-rounded" src="{{ url_for('static',filename='img/clarinette2.jpg') }}" alt="">
     </div>
     <div class="well">
       <img class="presentation-img img-thumbnail img-rounded" src="{{ url_for('static',filename='img/clarinette.jpg') }}" alt="">
       <div class="presentation-text">
-        <p>Omitto iuris dictionem in libera civitate contra leges senatusque
-          consulta; caedes relinquo; libidines praetereo, quarum acerbissimum
-          extat indicium et ad insignem memoriam turpitudinis et paene ad iustum
-          odium imperii nostri, quod constat nobilissimas virgines se in puteos
-          abiecisse et morte voluntaria necessariam turpitudinem depulisse.
-          Nec haec idcirco omitto, quod non gravissima sint, sed quia nunc
-          sine teste dico.</p>
+        <p>L’une des avancées majeures du XIX ème siècle fut  l’adaptation sur la clarinette des anneaux mobiles de Boehm (développés pour la flûte), réalisée par Hyacinthe Klosé, professeur au Conservatoire de Paris, en collaboration avec Louis Buffet, facteur d’instruments dont la manufacture existe encore aujourd’hui sous le nom de Buffet Crampon. Encore aujourd’hui, les fabricants de clarinettes comme Buffet Crampon et Selmer innovent et améliorent sans cesse leurs instruments pour atteindre un degré de perfection extraordinaire et répondre aux attentes des musiciens les plus exigeants. Les clarinettes sont réalisées en ébène, un bois très foncé et surtout très résistant, importé d’Afrique. Ce bois très dense leur confère une sonorité riche et puissante, encore amplifié avec l’utilisation de nouveaux matériaux comme le Green-Line (un composite à base de poudre d’ébène, développé par Buffet-Crampon, sa particularité mécanique est d’éliminer tout risque de fente entre autres avantages).</p>
       </div>
     </div>
 </div>
