Liaison inscription avec le stage

--- a/Developpement/templates/stage/stage_inscription_autorisationMedicale.html
+++ b/Developpement/templates/stage/stage_inscription_autorisationMedicale.html
@@ -17,13 +17,13 @@
                     <div class="form-group">
                         <label for="numContactUrg1">{{ form.numContactUrg1.label }}</label>
                         <div>
-                            {{ form.numContactUrg1(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
+                            {{ form.numContactUrg1(size=50, class_="form-control", type="tel", pattern="[0-9]{10}", placeholder="0633592090")}}
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="numContactUrg2">{{ form.numContactUrg2.label }}</label>
                         <div>
-                            {{ form.numContactUrg2(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
+                            {{ form.numContactUrg2(size=50, class_="form-control", type="tel", pattern="[0-9]{10}", placeholder="0633592090")}}
                         </div>
                     </div>
                     <button data-toggle="collapse" data-target="#demo" class="button button5"><span class="glyphicon glyphicon-plus"></span></button>
