--- a/Developpement/templates/stage/stage_inscription_basic.html
+++ b/Developpement/templates/stage/stage_inscription_basic.html
@@ -68,11 +68,11 @@
           </div>
           <div class="form-group">
             <label for="clarJouees">{{ persForm.clarJouees.label}}</label>
-            <div>{{ persForm.clarJouees(size=12, class_="form-control selectpicker show-tick") }}</div>
+            <div>{{ persForm.clarJouees(size=8, class_="form-control selectpicker show-tick") }}</div>
           </div>
           <div class="form-group">
-            <label for="usr">Votre Niveau</label>
-            <div>{{ persForm.niveau(class="form-control selectpicker show-tick", option="Niveau 1")}}</div>
+            <label for="usr">{{ persForm.niveau.label}}</label>
+            <div>{{ persForm.niveau(class="form-control selectpicker show-tick")}}</div>
           </div>
         </div>
       </div>
