--- a/Developpement/templates/stage/presentationStage.html
+++ b/Developpement/templates/stage/presentationStage.html
@@ -25,9 +25,16 @@
       <div>
         <p><span class="glyphicon glyphicon-comment"></span>  Description : {{ stage.descSt }}</p>
       </div>
-      <br><a href="/stage/inscription/" class="btn btn-default">
+      <br>
+      {% if current_user.is_authenticated %}
+      <a href="{{ url_for('stage_inscription_autorisationMedicale', id_s = stage.idSt) }}" class="btn btn-default">
         <span class="glyphicon glyphicon-check">  S'inscrire au stage</span>
       </a>
+      {% else %}
+      <a href="{{ url_for('stage_inscription', id_s = stage.idSt) }}" class="btn btn-default">
+        <span class="glyphicon glyphicon-check">  S'inscrire au stage</span>
+      </a>
+      {% endif %}
     </div>
     <div id="image">
       <img class="img-thumbnail img-rounded" src="{{ url_for('static',filename='img/AFFICHE_2019_03_01_Divertimento-page-001.jpg') }}" alt="">
