--- a/Developpement/templates/stage/stage_inscription_compte.html
+++ b/Developpement/templates/stage/stage_inscription_compte.html
@@ -20,7 +20,7 @@
           <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline2">
           <div class="form-group">
             <label for="username">{{ userForm.username.label }}</label>
-            <div>{{ userForm.username(size=50, class_="form-control",placeholder="Mot de passe")}}</div>
+            <div>{{ userForm.username(size=50, class_="form-control",placeholder="Nom de compte")}}</div>
           </div>
           {% if userError %}
           <p class="text-danger">Nom d'utilisateur déjà pris</p>
