[MOD] détails site (placeholder, textes)

--- a/Developpement/templates/contact/contact_administratif.html
+++ b/Developpement/templates/contact/contact_administratif.html
@@ -37,17 +37,17 @@
 
   <div class="form-group grand">
       <label for="nomAuteur">{{user_contactForm.nomAuteur.label}}</label>
-      <div>{{ user_contactForm.nomAuteur(size=50, class="form-control")}}</div>
+      <div>{{ user_contactForm.nomAuteur(size=50, class="form-control", placeholder="Nom de l'expéditeur")}}</div>
   </div>
   <br>
   <div class="form-group grand">
       <label for="prenomAuteur">{{user_contactForm.prenomAuteur.label}}</label>
-      <div>{{ user_contactForm.prenomAuteur(size=50, class="form-control")}}</div>
+      <div>{{ user_contactForm.prenomAuteur(size=50, class="form-control", placeholder="Prénom de l'expéditeur")}}</div>
   </div>
   <br>
   <div class="form-group grand">
       <label for="mailAuteur">{{user_contactForm.mailAuteur.label}}</label>
-      <div>{{ user_contactForm.mailAuteur(size=50, class="form-control")}}</div>
+      <div>{{ user_contactForm.mailAuteur(size=50, class="form-control", placeholder="Mail de l'expéditeur")}}</div>
   </div>
   <br>
 
