--- a/Developpement/static/styles/css/autre/mdpOubli.css
+++ b/Developpement/static/styles/css/autre/mdpOubli.css
@@ -1,10 +1,24 @@
-
-.underline2{
-  width:16%;
-  margin-top:-2.5%;
-
-}
-
 .liens{
   text-align: center;
+}
+#page{
+  background-color: #fbfcef;
+  border-color: black;
+  border-style: solid;
+  border-width: thin;
+  width: 60%;
+  margin-left: 20%;
+  margin-bottom: 2%;
+  padding-top: 2.5%;
+  padding-bottom: 1%;
+  padding-left: 5%;
+}
+.col-sm-3{
+  width: 40%;
+}
+#mail>label{
+  margin-left: -10%;
+}
+#bouton{
+  margin-left: 24%;
 }
