--- a/Developpement/static/styles/css/stage/stage_inscription_autorisation_medicale.css
+++ b/Developpement/static/styles/css/stage/stage_inscription_autorisation_medicale.css
@@ -25,8 +25,14 @@ img{
 }
 #palign{
     margin-top:3%;
-    margin-left: -32%;
-    width:98%;
+    margin-left: -23.5%;
+    width:80%;
+    text-align: justify;
+}
+#p2{
+  text-align: justify;
+  width:80%;
+  margin-left: 10%;
 }
 #demo{
     width:40%;
@@ -35,4 +41,13 @@ img{
 }
 .bigcontainer2{
     margin-left:-61%;
+}
+#page{
+  background-color: #fbfcef;
+  border-color: black;
+  border-style: solid;
+  border-width: thin;
+  margin-bottom: 2%;
+  margin-left: 1%;
+  margin-right: 1%;
 }
