[MOD] script js pour mail

--- a/Developpement/templates/administration/administration_mailing.html
+++ b/Developpement/templates/administration/administration_mailing.html
@@ -12,15 +12,15 @@
       // console.log($s);
 
       let val = $s.find('option:selected').text().split(' ');
-      // console.log(val);
-      if (val[1]=="autre") {
+      console.log(val);
+      if (val[1]=="Autre") {
         r.style.display = "";
       }
       else {
         r.style.display = "none";
       }
 
-      if (val[0]=="autre") {
+      if (val[0]=="Autre") {
         t.style.display = "";
       }
       else {
