paiement+ retouches css

--- a/Developpement/static/styles/css/contact/administratif.css
+++ b/Developpement/static/styles/css/contact/administratif.css
@@ -1,5 +1,7 @@
 .message{
   background-color: #fafdef;
+  border-style: solid;
+  border-width: thin;
   display: flex;
   flex-wrap: nowrap;
   text-align: center;
