--- a/Developpement/templates/administration/administration_gestionStagiaires.html
+++ b/Developpement/templates/administration/administration_gestionStagiaires.html
@@ -18,6 +18,7 @@
             <th>Niveau</th>
             <th>Mail</th>
             <th>Role</th>
+            <th>Action</th>
           </tr>
         </thead>
         <tbody>
