--- a/Developpement/templates/stage/stage_paiement.html
+++ b/Developpement/templates/stage/stage_paiement.html
@@ -4,8 +4,9 @@
 
 <h1>Page de paiement</h1>
 
+<div id="contain-paiement">
 <h2>Paiement effectué</h2>
-<table>
+<table class="table table-striped">
   <thead>
     <th>Numero de paiement</th>
     <th>Date de paiment</th>
@@ -21,7 +22,7 @@
 </table>
 
 <h2>Paiement à faire</h2>
-<table>
+<table class="table table-striped">
   <thead>
     <th>Numero de paiement</th>
     <th>Montant</th>
@@ -39,5 +40,5 @@
     </tr>
   </tbody>
 </table>
-
+</div>
 {% endblock %}
