--- a/Developpement/templates/administration/administration_gestionFichiers_articles.html
+++ b/Developpement/templates/administration/administration_gestionFichiers_articles.html
@@ -17,6 +17,7 @@
             <th>Auteur</th>
             <th>lien de l'image</th>
             <th>Texte</th>
+            <th>Action</th>
           </tr>
         </thead>
         <tbody>
@@ -32,7 +33,7 @@
               <a href="/administration/modifierStagiaire/" class="btn btn-default">
                 <span class="glyphicon glyphicon-pencil"></span>
               </a>
-              <a href="" class="btn btn-default">
+              <a href="" class="btn btn-danger">
                 <span class="glyphicon glyphicon-trash"></span>
               </a>
             </td>
