--- a/Developpement/templates/administration/administration_gestionFichiers_videos.html
+++ b/Developpement/templates/administration/administration_gestionFichiers_videos.html
@@ -39,7 +39,7 @@
               <a href="/administration/modifierStagiaire/" class="btn btn-default">
                 <span class="glyphicon glyphicon-pencil"></span>
               </a>
-              <a href="" class="btn btn-default">
+              <a href="" class="btn btn-danger">
                 <span class="glyphicon glyphicon-trash"></span>
               </a>
             </td>
