--- a/Developpement/templates/administration/administration_gestionStages.html
+++ b/Developpement/templates/administration/administration_gestionStages.html
@@ -28,6 +28,7 @@
             <th>Nombre de places</th>
             <th>Prix</th>
             <th>Tenue</th>
+            <th>Action</th>
           </tr>
         </thead>
         <tbody>
