retouche css quatuor presentation

--- a/Developpement/static/styles/css/quatuor/quatuor_presentation.css
+++ b/Developpement/static/styles/css/quatuor/quatuor_presentation.css
@@ -80,6 +80,8 @@ h3{
 }
 #Olivier-Roussillat, #Robert-Ramon, #Frederic-Dudilet, #Tony-Bigot{
 background-color: #fafdef;
+border-style: solid;
+border-width: thin;
 border-radius: 10%;
 width: 60%;
 margin: 2%;
@@ -179,12 +181,6 @@ margin: 2%;
 
   h3{
     font-weight: bold;
-  }
-  #Olivier-Roussillat, #Robert-Ramon, #Frederic-Dudilet, #Tony-Bigot{
-  background-color: #fafdef;
-  border-radius: 10%;
-  width: 60%;
-  margin: 2%;
   }
 
   #first-two{
